Update to Ubuntu 20.04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${USER_LOCATION_DIR}/lib)
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${USER_LOCATION_DIR}/lib)
 
 
+ADD_SUBDIRECTORY( doc )
 ADD_SUBDIRECTORY( src )
 ADD_SUBDIRECTORY( main )
 
