--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ INCLUDE_DIRECTORIES( include )
 
 ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic -ffast-math -O3)
 
-SET(USER_LOCATION_DIR $ENV{HOME}/Codes/Jupyter-Notebooks )
-SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${USER_LOCATION_DIR}/lib)
-SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${USER_LOCATION_DIR}/lib)
+#SET(USER_LOCATION_DIR $ENV{HOME}/Codes/Jupyter-Notebooks )
+SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
+SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 
 
 ADD_SUBDIRECTORY( doc )
