Remove docs from build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 
 
-ADD_SUBDIRECTORY( doc )
+#ADD_SUBDIRECTORY( doc )
 ADD_SUBDIRECTORY( src )
 ADD_SUBDIRECTORY( main )
 
