Add mVector to library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,16 +15,17 @@ math60082_blackScholes.cpp
 math60082_parabollicPDE.cpp
 math60082_parabollicPDE_examples.cpp
 math60082_fokker_planck.cpp
+math60082_mVector.cpp
 )
 
 ADD_LIBRARY( math60082 SHARED
 ${MY_LIBRARY_SRCS}
 )
 
-TARGET_LINK_LIBRARIES( math60082 boost_system pthread)
+TARGET_LINK_LIBRARIES( math60082 boost_system pthread gsl cblas)
 
 ADD_LIBRARY( math60082_static STATIC
 ${MY_LIBRARY_SRCS}
 )
 
-TARGET_LINK_LIBRARIES( math60082_static boost_system pthread)
+TARGET_LINK_LIBRARIES( math60082_static boost_system pthread gsl cblas)
