--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ math60082_parabollicPDE.cpp
 math60082_parabollicPDE_examples.cpp
 math60082_fokker_planck.cpp
 math60082_mVector.cpp
+math60082_mMatrix.cpp
 )
 
 ADD_LIBRARY( math60082 SHARED
