--- a/environment.yml
+++ b/environment.yml
@@ -5,10 +5,9 @@ channels:
   - conda-forge
 
 dependencies:
-  - cling=0.8
-  - xeus=2.0.0  
-  - xeus-cling=0.13.0
-  - xtl=0.7.2
+  - cling
+  - xeus  
+  - xeus-cling
   - gcc_linux-64=9.3.0
   - notebook
-  - boost-cpp=1.65.1
+  - boost-cpp=1.72.0
