Update Eigen3 to dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ SET(CMAKE_CXX_STANDARD 14)
 SET(CMAKE_BUILD_TYPE Release)
 FIND_PACKAGE ( Threads REQUIRED )
 FIND_PACKAGE ( Boost REQUIRED )
-FIND_PACKAGE ( Eigen REQUIRED )
+FIND_PACKAGE ( Eigen3 REQUIRED )
 
 INCLUDE_DIRECTORIES( include )
 
