Add Eigen3::Eigen as a target link library to fix compilation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,10 +27,10 @@ ADD_LIBRARY( math60082 SHARED
 ${MY_LIBRARY_SRCS}
 )
 
-TARGET_LINK_LIBRARIES( math60082 boost_system pthread gsl cblas)
+TARGET_LINK_LIBRARIES( math60082 boost_system pthread gsl cblas Eigen3::Eigen)
 
 ADD_LIBRARY( math60082_static STATIC
 ${MY_LIBRARY_SRCS}
 )
 
-TARGET_LINK_LIBRARIES( math60082_static boost_system pthread gsl cblas)
+TARGET_LINK_LIBRARIES( math60082_static boost_system pthread gsl cblas Eigen3::Eigen)
