--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,7 @@ FIND_PACKAGE ( Threads REQUIRED )
 FIND_PACKAGE ( Boost REQUIRED )
 FIND_PACKAGE ( Eigen3 REQUIRED )
 
-INCLUDE_DIRECTORIES( include ${Eigen3_INCLUDE_DIRS})
-
+INCLUDE_DIRECTORIES( include )
 ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic -ffast-math -O3)
 
 SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
