--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - conda-forge
 
 dependencies:
-  - xeus-cling
+  - xeus-cling=0.15.0
   - gcc_linux-64=9.3.0
-  - notebook
+  - notebook=6.5.2
   - boost-cpp=1.72.0
